# NephrostomyTutor

./: NephrostomyTutor.bat  README.md  StopPlus.bat
Config/: InPlaneInsertion_LiveWebcamVideo.xml  PlusDeviceSet_Server_IntelRealSenseVideo.xml  PlusDeviceSet_Server_TobiiInteractor.xml  PlusDeviceSet_Server__Telemed-50mm-L12-Ascension-Webcam-Color-Video.xml  PlusDeviceSet_Server__Telemed-60mm-L12-Ascension-Webcam-Color-Video.xml  Telemed-50mm-L12_Ascension.xml  Telemed-50mm-L12_Ascension_Calibration.xml  Telemed-60mm-L12_Ascension.xml  Telemed-60mm-L12_Ascension_Calibration.xml
Config/Leah Config/: PlusDeviceSet_Server_IntelRealSenseVideo.xml  Telemed-50mm-L12_Ascension.xml  Telemed-60mm-L12_Ascension.xml
NephrostomyTutor/: CMakeLists.txt  NephrostomyTutor.npy  NephrostomyTutor.py  NephrostomyTutor.xcf
NephrostomyTutor/NephrostomyTutor/: NephrostomyTutor.py
NephrostomyTutor/NephrostomyTutor/Resources/: Calyces.stl  Flip2.h5  ImageToProbe.h5  NeedleTipToNeedle.h5  NephrostomyUserDatabase.csv  PhantomToReference.h5  ProbeModelToProbe_L12.h5  Probe_C5-2R60S-3.stl  ReferenceToRas.h5  UsProbe.stl  probeModelToProbe.h5
NephrostomyTutor/NephrostomyTutor/Resources/Models/Kidney_Unet/: Kidney_Unet.py  nephrostomy_unet_config.json
NephrostomyTutor/NephrostomyTutor/Resources/StyleSheets/: NephrostomyTutorStyle.qss
NephrostomyTutor/Resources/: ImageToProbe.h5  Telemed_L12.stl
NephrostomyTutor/Resources/Icons/: NephrostomyTutor.xcf
NephrostomyTutor/Resources/StyleSheets/: NephrostomyTutorStyle.qss
